--- a/www/package.json
+++ b/www/package.json
@@ -27,6 +27,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-render-html": "^0.1.6",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
     "react-tap-event-plugin": "^2.0.1",
