[npm] fixed deploy target

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A conference application about sessions and speakers",
   "scripts": {
     "start": "node server",
-    "deploy": "./node_modules/.bin/webpack -d www/ && cordova build android && cordova run android",
+    "deploy": "./node_modules/.bin/webpack -d && cordova build android && cordova run android",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
