--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "react",
     "redux"
   ],
-  "author": { "name" : "Guillaume Pouilloux"
-            , "email" : "gui.pouilloux@gmail.com"
-            , "url" : "https://github.com/gpouilloux/"
-            },
+  "author": {
+    "name": "Guillaume Pouilloux",
+    "email": "gui.pouilloux@gmail.com",
+    "url": "https://github.com/gpouilloux/"
+  },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/gpouilloux/conference-cordova-react.git"
+  },
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.22.1",
@@ -27,8 +32,10 @@
     "babel-preset-stage-0": "^6.22.0",
     "material-ui": "^0.16.7",
     "material-ui-image": "^1.1.0",
+    "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-event-timeline": "^1.2.2",
     "react-redux": "^5.0.2",
     "react-render-html": "^0.1.6",
     "react-router": "^3.0.2",
